<resources>
    <string name="ph_fees">Menu Pagamento</string>
    <string name="fees_1x">1x Vez S/ Juros</string>
    <string name="fees_2x">2x Vez S/ Juros</string>
    <string name="fees_3x">3x Vez S/ Juros</string>
    <string name="fees_4x">4x Vez S/ Juros</string>
    <string name="fees_5x">5x Vez S/ Juros</string>
    <string name="fees_6x">6x Vez S/ Juros</string>
    <string name="fees_7x">7x Vez S/ Juros</string>
    <string name="fees_8x">8x Vez S/ Juros</string>
    <string name="fees_9x">9x Vez S/ Juros</string>
    <string name="fees_10x">10x Vez S/ Juros</string>
    <string name="fees_11x">11x Vez S/ Juros</string>
    <string name="fees_12x">12x Vez S/ Juros</string>
    <string name="txt_card_credit">Cartão de crédito</string>
    <string name="txt_card_debit">Cartão de débito</string>
    <string name="txt_pix">Pix</string>
    <string name="txt_bank_slip">Boleto bancário</string>
    <string-array name="status_ordem">
        <item>Em andamento</item>
        <item>Não iniciado</item>
        <item>Concluído</item>
    </string-array>
    <string-array name="forma_pagamento">
        <item>Cartão de crédito</item>
        <item>Cartão de débito</item>
        <item>Pix</item>
        <item>Boleto bancário</item>
    </string-array>
    <string-array name="vezes_cartao">
        <item>1x Vez S/ Juros</item>
        <item>2x Vez S/ Juros</item>
        <item>3x Vez S/ Juros</item>
        <item>4x Vez S/ Juros</item>
        <item>5x Vez S/ Juros</item>
        <item>6x Vez S/ Juros</item>
        <item>7x Vez S/ Juros</item>
        <item>8x Vez S/ Juros</item>
        <item>9x Vez S/ Juros</item>
        <item>10x Vez S/ Juros</item>
        <item>11x Vez S/ Juros</item>
        <item>12x Vez S/ Juros</item>
    </string-array>
    <string-array name="mes_cartao">
        <item>Mês</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="ano_cartao">
        <item>Ano</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
    </string-array>
    <string name="tl_payment">Pagamento</string>
    <string name="tl_select_payment">Selecione a forma e pagamento</string>
    <string name="tl_number_card">Número do cartão</string>
    <string name="tl_times_card">Vezes no cartão</string>
    <string name="tl_name_printed_card">Nome impresso no cartão</string>
    <string name="tl_validity_card">Validade:</string>
    <string name="ph_month_card">Mês</string>
    <string name="ph_year_card">Ano:</string>
    <string name="tl_security_code">Código de segurança</string>
    <string name="ph_qtdpayment">01</string>
    <string name="ph_qtdpayment1">02</string>
    <string name="ph_qtdpayment2">03</string>
    <string name="ph_qtdpayment3">04</string>
    <string name="ph_qtdpayment4">05</string>
    <string name="ph_qtdpayment5">06</string>
    <string name="ph_qtdpayment6">07</string>
    <string name="ph_qtdpayment7">08</string>
    <string name="ph_qtdpayment8">09</string>
    <string name="ph_qtdpayment9">10</string>
    <string name="ph_qtdpayment10">11</string>
    <string name="ph_qtdpayment11">12</string>
    <string name="ph_validation4">2022</string>
    <string name="ph_validation5">2023</string>
    <string name="ph_validation6">2024</string>
    <string name="ph_validation7">2025</string>
    <string name="ph_validation8">2026</string>
    <string name="ph_validation9">2027</string>
    <string name="ph_validation10">2028</string>
    <string name="tl_login">Entrar</string>
    <string name="ph_email">E-mail:</string>
    <string name="ph_password">Senha</string>
    <string name="txt_forgot_password">Esqueceu a senha?</string>
    <string name="txt_Enter">Entrar </string>
    <string name="txt_or">Ou</string>
    <string name="txt_register">Cadastrar-se</string>
    <string name="tl_Pack">Para seguir no cadastro conheça nossos pacotes e serviços</string>
    <string name="tl_standard">Standard</string>
    <string name="tl_price_standard">200,00 </string>
    <string name="tl_pro">Pro</string>
    <string name="tl_price_pro">350,00</string>
    <string name="tl_premium">Premium</string>
    <string name="tl_price_premium">600,00</string>
    <string-array name="filter_option">
        <item>FILTROS</item>
        <item>Cliente</item>
        <item>Placa</item>
        <item>Data</item>
        <item>Nº Ordem</item>
    </string-array>
    <string name="tl_menu">Home</string>
    <string name="tl_pack_standard">Pacote Standard</string>
    <string name="tl_pack_pro">Pacote Pro </string>
    <string name="tl_pack_premium">Pacote Premium</string>
    <string name="tl_logout">Sair</string>
    <string name="txt_pack_standard">Nosso pacote standard é um básico que oferece uma melhor
        organização de serviços e seus funcionário</string>
    <string name="txt_pack_standard_time">3 meses de uso </string>
    <string name="txt_pack_standard_desc">5 funcionários para o registro</string>
    <string name="txt_standard_employee">X</string>
    <string name="txt_helpdesk">Suporte 24H</string>
    <string name="txt_pack_pro">Nosso pacote Pro é um mais robusto entregando melhor
        controle dos seus negócios e disponibilizados por 1 ano</string>
    <string name="txt_pack_pro_time">1 ano de uso </string>
    <string name="txt_pack_pro_desc">10 funcionários para o registro</string>
    <string name="txt_pack_pro_employee">350 clientes para cadastro</string>
    <string name="txt_pack_premium">Nosso pacote Premium é melhor e o mais robusto,entregando ferramentas
        ilimitadas durantes 2 anos </string>
    <string name="txt_pack_premium_time">2 anos de uso </string>
    <string name="txt_pack_premium_desc">Ilimitado</string>
    <string name="txt_completed_purchase">Compra de pacote realizada com sucesso!
    Vamos direciona-lo para continuar o cadastro</string>
    <string name="tl_orderservice">Ordens de serviço</string>
    <string name="tl_order_status_notstarted">Não iniciado</string>
    <string name="tl_order_status_progress">Em andamento </string>
    <string name="tl_order_status_concluded">Concluído </string>
    <string name="tl_order_0001">Ordem 0001 </string>
    <string name="tl_name_orderservice">Nome: </string>
    <string name="tl_board_orderservice">Placa: </string>
    <string name="tl_status_orderservice">Status </string>
    <string name="tl_order_0002">Ordem 0002 </string>
    <string name="tl_status_info_customers">Status</string>
    <string name="ph_orderview2">Informações do cliente </string>
    <string name="tl_cpf">CPF:</string>
    <string name="tl_info_orderservice">Informações da ordem de serviço</string>
    <string name="tl_price_orderservice">Preço:</string>
    <string name="tl_date_estimated">Data estimada:</string>
    <string name="tl_date_issue">Data de emissão:</string>
    <string name="txt_change_status_service">Deseja alterar o status de serviço?</string>
    <string name="txt_delete_order_service">Deseja excluir a ordem de serviço?</string>
    <string name="tl_dropmenu">Drop Menu</string>
    <string name="tl_edit">Editar</string>
    <string name="tl_delete">Excluir</string>
    <string name="txt_save">Deseja salvar alterações?</string>
    <string name="tl_service_history">Histórico de serviços</string>
    <string name="tl_help_tuneup">Ajuda TuneUp</string>
    <string name="popup_save">Alterações salvas</string>
    <string name="popup_error">Ocorreu um erro</string>
    <string name="popup_delete_completed">Exclusão concluída</string>
    <string name="tl_employee">Funcionários</string>
    <string name="tl_name_employee_cesar">César Candido</string>
    <string name="txt_level_employee">Nível de acesso:Gerente</string>
    <string name="txt_number_employee_manager">(11)99999-9999</string>
    <string name="tl_name_employee_douglas">Douglas Gonzaga</string>
    <string name="txt_level_employee_mechanic">Nível de acesso:Mecânico</string>
    <string name="txt_name_employee_luisa">Luisa Helenna</string>
    <string name="txt_level_employee_mechanics">Nível de acesso:Mecânica</string>
    <string name="txt_name_employee_maria">Maria Carmo</string>
    <string name="txt_level_employee_workshop">Nível de acesso:Chefe de oficina</string>
    <string name="tl_name_employee_lucas">Lucas Silva</string>
    <string name="txt_add_new_employee">Deseja adicionar um novo funcionário?</string>
    <string name="txt_delete_employee">Deseja excluir funcionário?</string>
    <string name="ph_cesar_augusto_silva">Cesar augusto silva</string>
    <string name="tl_date_birth">Data de nascimento:</string>
    <string name="ph_date_birth">02/04/2001</string>
    <string name="ph_cpf">440.567.546-05</string>
    <string name="tl_office">Cargo:</string>
    <string name="ph_office_manager">Chefe de oficina</string>
    <string name="ph_email_cesar">cesarcandido@gmail.com</string>
    <string name="tl_phone">Telefone/Celular:</string>
    <string name="txt_save_edit">Salvar edição</string>
    <string name="txt_cancel">Cancelar</string>
    <string name="tl_customers">Clientes</string>
    <string name="tl_name_customers_nadia">Nadia Tavares</string>
    <string name="txt_plate_license">Placa do veículo:JUZ9119</string>
    <string name="txt_number_customers">(11)11111-1111</string>
    <string name="tl_name_customers_carlos">Carlos Perezes</string>
    <string name="txt_license_lvl">Placa do veículo:LVL1331</string>
    <string name="tl_name_customers_alan">Alan Ferraz</string>
    <string name="txt_license_hxh">Placa do veículo:HXH4819</string>
    <string name="tl_name_customers_julio">Julio Cesar</string>
    <string name="txt_license_kjm">Placa do veículo:KJM4386</string>
    <string name="tl_name_customers_lucas_castro">Lucas Castro</string>
    <string name="txt_license_agd">Placa do veículo:AGD8033</string>
    <string name="txt_add_new_customers">Deseja adicionar um novo cliente?</string>
    <string name="txt_delete_customers">Deseja excluir cliente?</string>
    <string name="tl_data_client">Dados do cliente</string>
    <string name="ph_name_customers_nadia">Nadia Tavares Souza</string>
    <string name="ph_cpf_customers_nadia">420.567.546-05</string>
    <string name="ph_date_birth_nadia">04/05/2001</string>
    <string name="ph_email_customers_nadia">nadiaTsouza@hotmail.com</string>
    <string name="tl_model_car">Modelo:</string>
    <string name="tl_search_service">Pesquisa de serviço</string>
    <string name="txt_plate_edk">EDK-3650</string>
    <string name="txt_completion_date">Data de conclusão: 12/082021</string>
    <string name="tl_placa_menu">Placa:</string>
    <string name="tl_date">Data</string>
    <string name="tl_order_numver">Número de ordem</string>
    <string name="tl_name">Nome</string>
    <string name="tl_generate_pdf">Gerar PDF</string>
    <string name="tl_generate_qrcode">Gerar QRcode</string>
    <string name="txt_back_button">Voltar</string>
    <string name="txt_next_button">Próximo</string>
    <string name="txt_conclude_button">Concluir</string>
    <string name="tl_company_information">Informações da empresa</string>
    <string name="app_name">EMS</string>
    <string name="tl_name_workshop">Nome da oficina</string>
    <string name="ph_corporate_name">Razão social</string>
    <string name="ph_cnpj">CNPJ</string>
    <string name="ph_email_company">Email empresarial</string>
    <string name="ph_phone_company">Telefone empresarial</string>
    <string name="ph_state_registration">IE (Inscrição Estadual)</string>
    <string name="ph_cep">Cep</string>
    <string name="ph_street">Rua</string>
    <string name="ph_district">Bairro</string>
</resources>